--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "repository": "github",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "lite-server"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "^10.5.2",
-    "jest": "^23.4.1"
+    "jest": "^23.4.1",
+    "lite-server": "^2.4.0"
   }
 }
