--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "allowJs": true,             // Allow javascript files to be compiled.
+    "strict": false,              // enable all strict type-checking options.
+    "alwaysStrict": false        // parse in strict mode and emit "use strict" for each source file.
   },
   "exclude": [
     "node_modules"
