--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@types/node": "^10.5.6",
+    "gulp": "^3.9.1",
+    "gulp-image": "^4.3.0",
     "jest": "^23.4.2",
     "lite-server": "^2.4.0"
   }
