--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "less": "^3.8.1",
-    "npm": "^6.3.0",
-    "typescript": "^3.0.1"
+    "npm": "^6.4.0"
   },
   "devDependencies": {
-    "@types/node": "^10.5.6",
+    "less": "^3.8.1",
+    "typescript": "^3.0.1",
+    "@types/node": "^10.7.1",
     "gulp": "^3.9.1",
-    "gulp-image": "^4.3.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-svgmin": "^1.2.4",
     "jest": "^23.4.2",
     "lite-server": "^2.4.0"
   }
