Fix gulpfile.js to work with gulp 3.9.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "null",
-  "name": "hellojavascript",
+  "name": "hello_javascript",
   "scripts": {
     "test": "jest",
     "dev": "lite-server"
